tests/mm0_mmu/fail/bad-sort341.mm0
-- bad modifier order
provable free pure sort s341;